# protocol-event

./: .eslintcache  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  Anchor.toml  README.md  jest.config.js  package.json  tsconfig.json
.github/: CODEOWNERS  pjmt_auto_label_config.yml  pjmt_label_config.yml
.github/workflows/: cd_deploy_.yml  cd_deploy_manual.yml  cd_devnet_deploy_dev.yml  cd_devnet_deploy_stable.yml  ci_build_.yml  ci_build_externalevent.yml  ci_build_manual.yml  ci_cache_solana.yml  ci_cache_solana_for_deploy.yml  ci_security_audit.yml  pjmt_auto_mgmt.yml  pjmt_sync_labels.yml  (+2 more)
.husky/: pre-commit
admin/: category.ts  client.ts  closeAccount.ts  create_event.ts  event.ts  eventGroup.ts  participant.ts  pda.ts  subcategory.ts  update_event.ts  util.ts
client/: index.ts  package-lock.json  package.json  programId.ts  tsconfig.json
programs/externalevent/: Cargo.toml
programs/externalevent/src/: context.rs  event_account.rs  lib.rs
programs/externalevent/src/instructions/: create.rs  mod.rs  process.rs  update.rs
programs/externalevent/src/state/: event_account.rs
programs/protocol_event/: Cargo.toml
programs/protocol_event/src/: context.rs  error.rs  lib.rs
programs/protocol_event/src/instructions/: create.rs  create_event.rs  create_grouping.rs  create_participant.rs  mod.rs  update.rs  update_event.rs  update_grouping.rs  update_participant.rs
programs/protocol_event/src/state/: category.rs  classification.rs  event.rs  event_account.rs  event_group.rs  grouping.rs  mod.rs  participant.rs  subcategory.rs
tests/: close_accounts.ts  setup.ts
(+96 files in other folders)
