[package]
name = "protocol_event"
version = "0.3.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol_event"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
stable = []
dev = []

[dependencies]
solana-program = "1.17.2"
anchor-lang = "0.29.0"
